--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -572,8 +572,9 @@ and ${\Id}1$. The rule $\text{\it Zero}$ is a bona fide rewrite rule,
 which leaves the special equality $\text{{\it Id}1}$ to be dealt with in an ad hoc
 fashion.
 
-Using operators $\times$ and $1$ we may now construct $n$-tuples of objects, which we shall call contexts.
-$1$ is the empty context, and if $E$ is a context of length $n$ and $A$ an object term, 
+Using operators $\times$ and $1$ we may now construct $n$-tuples of
+objects, which we shall call {\it contexts}. $1$ is the empty context, 
+and if $E$ is a context of length $n$ and $A$ an object term, 
 $E \times A$ is a context of length $n+ 1$. 
 We write $|E|$ for the length of a context.
 If $C$ is the current set of (representable)
@@ -829,7 +830,7 @@ $$
  \text{\it DistrAbs}\}
 $$
 Considered as a (typed) term-rewriting system, $\R_1$ is locally confluent. This can be mechanically
-checked by the Knuth-Bendix decision procedure [9]. Note that this is possible because a system
+checked by the Knuth-Bendix decision procedure \cite{9}. Note that this is possible because a system
 such as $\R_1$ may be considered an (untyped) equational theory in the ordinary sense, by mixing the
 arrow structure and the object structure as follows: every arrow sub-term $M$ of type $A \imp B$ is
 represented as $: (M,A,B)$, where $:$ is a special ternary function symbol. Note that variables in the
@@ -842,7 +843,7 @@ formulated as to showing that the rewriting relation is a well-partial-ordering.
 However, note that this argument cannot work on the $\Sigma$-trees alone,
 since the corresponding untyped system is strong enough to code the 
 $\beta$-reductions of untyped $\l$-calculus. 
-We remark that Klop has shown [16] that $\l$-calculus with surjective pairing
+We remark that Klop has shown \cite{16} that $\l$-calculus with surjective pairing
 is not Church-Rosser; however, his proof
 cannot be easily adapted to show that the untyped version of $\R_1$ is not confluent.
 Another interesting locally confluent subtheory is:
