--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -185,8 +185,8 @@ pdfencoding=auto, psdextra
 \def\Idr{\text{\it Idr}}
 \def\Nil{\text{\it Nil}}
 \def\Uni{\text{\it Uni}}
-\def\Nill{\text{\it Nil}1}
-\def\Unii{\text{\it Uni}1}
+\def\Nill{\text{\it Nil}_1}
+\def\Unii{\text{\it Uni}_1}
 \def\Assoc{\text{\it Assoc}}
 \def\fst{\mathop{\text{\it fst}}}
 \def\snd{\mathop{\text{\it snd}}}
@@ -546,7 +546,7 @@ The co-unit of the adjunction is the pair of projections $(\fst, \snd)$.
 \subsection{Finite products}
 
 We say that a category admits all finite products if it admits products and a terminal object.
-Equationally, this amounts to enrich the theory {\bf Prod} to a theory {\bf Prods} by adding
+Equationally, this amounts to enriching the theory {\bf Prod} to a theory {\bf Prods} by adding
 a constant $1$ to $\Phi$, a polymorphic constant $\Nil : A \imp 1$ to $\Sigma$,
 and a unicity equation $\Unii$ to $\R$:
 $$
@@ -562,14 +562,14 @@ Note that $\Unii$ entails with the other equations two consequences:
 
 \begin{align*}
 \text{\it Zero} &: f \comp \Nil = \Nil\\
-\text{{\it Id}1} &: \Id = \Nil
+\text{{\it Id}}_1 &: \Id = \Nil
 \end{align*}
-Again, ${\Id}1$ does not identify every $\Id$ with every $\Nil$,
+Again, ${\Id}_1$ does not identify every $\Id$ with every $\Nil$,
 but only (restoring explicit types) $\Id_1$
 with $\Nil_1$. Now it may be checked that $\Unii$ is actually a
 consequence of $\text{\it Zero}$
-and ${\Id}1$. The rule $\text{\it Zero}$ is a bona fide rewrite rule, 
-which leaves the special equality $\text{{\it Id}1}$ to be dealt with in an ad hoc
+and ${\Id}_1$. The rule $\text{\it Zero}$ is a bona fide rewrite rule, 
+which leaves the special equality $\text{{\it Id}}_1$ to be dealt with in an ad hoc
 fashion.
 
 Using operators $\times$ and $1$ we may now construct $n$-tuples of
@@ -627,7 +627,7 @@ As before, this equational theory may be mechanically generated from the followi
 \begin{center}
 \begin{tikzcd}[column sep=large,row sep=7em]
  B \impl C \times B  \arrow[thick, r, "\App"]& C \\
- A  \arrow[thick, u, shift left=7.5, "\abs f" {right}]  \times B \qquad \arrow[thick, u, "\Id" {right}] 
+ A  \arrow[thick, u, shift left=7.5, "\abs\! f" {right}]  \times B \qquad \arrow[thick, u, "\Id" {right,yshift = 1em}] 
  \arrow[thick, ur, "f" {below, yshift = -3pt} ] &
 \end{tikzcd}
 \end{center}
