fix abstraction op

--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -156,7 +156,7 @@ pdfencoding=auto, psdextra
 \def\schon{Sch\"onfinkel}
 \def\nat{\mathbb N}
 \def\pf{\varphi}
-\def\abs{\mathop{\text{\small[\,]}}}
+\def\abs#1{\mathop{\text{\tt [$#1$]}}}
 \def\App{\mathop{\text{\it App}}}
 \def\sigmaN{\Sigma^n_N}
 \def\comptr{\triangleright}
@@ -613,21 +613,21 @@ $\pi_{E} (n) : E \imp E_n$, as:
 
 We obtain the theory {\bf Exp} by enriching the theory {\bf Prods} as follows. First, we add a binary
 operator $\impl$ to $\Phi$. Next we add two operators to $\Sigma$, the constant ${\App}$
-(application) and the unary operator $\abs$ (abstraction):
+(application) and the unary operator $\abs{}$ (abstraction):
 \begin{align*}
 {\App} & : (B \impl C) \times B \imp C\\
-\abs &: A \times B \imp C \ent A\imp (B \impl C)
+\abs{} &: A \times B \imp C \ent A\imp (B \impl C)
 \end{align*}
 Finally, we add the following equations to $\R$:
 \begin{align*}
-{\text{\it ExAbs}} & :\, \App \comp (\abs f \times \Id) = f\\
-{\text{\it UniAbs}} &:\, \abs(\App \comp (f \times \Id)) = f
+{\text{\it ExAbs}} & :\, \App \comp (\abs{} f \times \Id) = f\\
+{\text{\it UniAbs}} &:\, \abs{}(\App \comp (f \times \Id)) = f
 \end{align*}
 As before, this equational theory may be mechanically generated from the following diagram:
 \begin{center}
 \begin{tikzcd}[column sep=large,row sep=7em]
  B \impl C \times B  \arrow[thick, r, "\App"]& C \\
- A  \arrow[thick, u, shift left=7.5, "\abs\! f" {right}]  \times B \qquad \arrow[thick, u, "\Id" {right,yshift = 1em}] 
+ A  \arrow[thick, u, shift left=7.5, "\abs{}\! f" {right}]  \times B \qquad \arrow[thick, u, "\Id" {right,yshift = 1em}] 
  \arrow[thick, ur, "f" {below, yshift = -3pt} ] &
 \end{tikzcd}
 \end{center}
@@ -638,29 +638,29 @@ of the deduction theorem.
 
 Let us give a few equational consequences of the theory {\bf Exp}:
 \begin{align*}
-{\text{\it IdExp}} & : \abs \App = \Id\\
-{\text{\it Red}}_1 & : \App \comp \la \abs f \comp y, x\ra = f\comp\la y, x\ra \\
-{\text{\it Red}} & : \App \comp \la\abs f, x \ra = f\comp\la \Id , x\ra \\
-{\text{\it DistrAbs}} & : \abs f \comp g = \abs(f \comp (g \times \Id ))
+{\text{\it IdExp}} & : \abs{} \App = \Id\\
+{\text{\it Red}}_1 & : \App \comp \la \abs{} f \comp y, x\ra = f\comp\la y, x\ra \\
+{\text{\it Red}} & : \App \comp \la\abs{} f, x \ra = f\comp\la \Id , x\ra \\
+{\text{\it DistrAbs}} & : \abs{} f \comp g = \abs{}(f \comp (g \times \Id ))
 \end{align*}
 We can also show that abstraction is a bijection between the arrows of A×B →C and those
 of $A \imp B \impl C$, with inverse:
 $$
-{\abs}^{-1}\, f = \App \comp \la f \times \Id \ra
+{\abs{}}^{-1}\, f = \App \comp \la f \times \Id \ra
 $$
-Thus we could have presented {\bf Exp} in terms of $\abs$ and ${\abs}^{-1}$, and defined $\App$
-as ${\abs}^{-1}\Id$. This corresponds to the fact that we could have rather axiomatized 
-exponentiation by an adjunction to the product, whose co-unit is $\App$ (the unit being $\abs \Id$ ).
+Thus we could have presented {\bf Exp} in terms of $\abs{}$ and ${\abs{}}^{-1}$, and defined $\App$
+as ${\abs{}}^{-1}\Id$. This corresponds to the fact that we could have rather axiomatized 
+exponentiation by an adjunction to the product, whose co-unit is $\App$ (the unit being $\abs{} \Id$ ).
 
 Finally, we define the arrow part of the functor $\impl$ (which is contravariant in its first argument)
 as:
 $$
-f \impl g = \abs(g\comp \App \comp (\Id \times f)).
+f \impl g = \abs{}(g\comp \App \comp (\Id \times f)).
 $$
 
 \section{Lambda-calculus}
 
-Sometimes $\abs$ is called ``Curryfication'', in honor of Curry. In fact there is an important relation
+Sometimes $\abs{}$ is called ``Curryfication'', in honor of Curry. In fact there is an important relation
 between combinatory logic and CCC’s, which we shall exhibit on $\l$-calculus.
 
 \subsection{The $\l$-terms}
@@ -671,19 +671,19 @@ in the {\it context} $E$'',
 where $A \in \C$ and $E \in \C^*$, as follows:
 \begin{align*}
 \text{\bf Variable} &: \text{If } 1 \leq n \leq |E| \text{ then } E\ent n: E_n\\
-\text{\bf Abstraction} &: \text{If } E \times A \ent M : B \text{ then } E \ent [A]M : A \impl B\\
+\text{\bf Abstraction} &: \text{If } E \times A \ent M : B \text{ then } E \ent \abs{A}M : A \impl B\\
 \text{\bf Application} &: \text{If } E \ent M: A \impl B \text{ and } E \ent N
 \text{ then } E \ent (M N) : B
 \end{align*}
-Thus a term may be a natural number, or may be of the form $[A]M$ with $A$ an object and $M$
+Thus a term may be a natural number, or may be of the form $\abs{A}M$ with $A$ an object and $M$
 a term, or may be of the form $(M N)$ with $M, N$ two terms.
 
 We thus obtain $\l$-terms typed with objects of the CCC currently axiomatized. Variables are
 coded as de Bruijn's indexes \cite{2}. i.e. as integers denoting their reference depth (distance in the
 tree to their binder). This representation avoids all the renaming problems associated with actual
 names ($\alpha$ conversion), but we shall use such names whenever we give examples of terms. For
-instance, the term $[A] (1\, [B](1 2))$ shall be presented under a concrete representation such as
-$[x : A] (x [y : B] (y x))$. In Church's original notation, the left bracket was a $\l$ and the right
+instance, the term $\abs{A} (1\, \abs{B}(1 2))$ shall be presented under a concrete representation such as
+$\abs{x : A} (x \abs{y : B} (y x))$. In Church's original notation, the left bracket was a $\l$ and the right
 bracket a dot, and typing was indicated by superscripting, like: $\l x^A\cdot (x \l y^B \cdot (y x))$.
 
 Note that the relation $E \ent M : A$ is functional, in that $A$ is uniquely determined from $E$ and $M$.
@@ -695,17 +695,19 @@ We shall now show how to translate $\l$-terms to CCC arrows. More precisely, to 
 that $E \ent M : A$ we associate an arrow $F_E(M) : E \imp A$ as follows:
 \begin{align*}
 F_E (n) &= \pi_E (n)\\
-F_E ([A]M) &= \abs F_{E \times A}(M)\\
+F_E (\abs{A} M) &= \abs{} F_{E \times A}(M)\\
 F_E ((M\, N)) &= \App \comp \la F_E (M) , F_E (N) \ra
 \end{align*}
 It can be easily proved by induction that $F_E(M)$ is a well-typed arrow expression.
 
 \medskip
 \noindent
-{\bf Example}. The closed term $M = [f : \nat \impl \nat ][x : \nat](f\, (f\, x))$ of type $A = (\nat \impl
+{\bf Example}. The closed term $M = \abs{f : \nat \impl \nat }
+\abs{x : \nat}(f\, (f\, x))$ of type $A = (\nat \impl
 \nat) \impl (\nat\impl \nat)$ in the empty context $E = 1$, gets translated to:
 $$
-F_E (M) = \abs \abs (\App\comp \la \snd \comp \fst, \App \comp \la \snd \comp \fst, \snd\ra \ra) : 1 \imp A.
+F_E (M) = \abs{} \abs{} (\App\comp \la \snd \comp \fst, 
+\App \comp \la \snd \comp \fst, \snd\ra \ra) : 1 \imp A.
 $$
 
 \subsection{The syntactic theory of terms}
@@ -718,7 +720,7 @@ $M^{+n} = R^0_{n}(M)$, with:
 \begin{array}{rcll}
 R^i_n(k) & = & k & \text{ if } k \leq i\nonumber\\
 && k + n & \text{ if } k > i\nonumber\\
-R^i_n([A]M) &=& [A]R^{i+1}_n (M)\nonumber\\
+R^i_n(\abs{A} M) &=& \abs{A} R^{i+1}_n (M)\nonumber\\
 R^i_n((M N)) &=& (R^i_n(M) R^i_n(N)).\nonumber
 \end{array}
 \]
@@ -732,7 +734,7 @@ define a term $M\{N\}$, and show that $E \ent M\{N\}: B$. First we define recurs
 \sigmaN & = & k + 1 & \text{ if } k < n \\
  &  & N^{+n} & \text{ if } k = n \\
  &  & k  & \text{ if } k > n \\
-\sigmaN([A]M) & = & [A]\Sigma^{n}_{n+1} (M)\\
+\sigmaN(\abs{A}M) & = & \abs{A}\Sigma^{n}_{n+1} (M)\\
 \sigmaN(M\, M') &=& (\sigmaN(M) \, \sigmaN(M') )
 \end{array}
 \]
@@ -747,8 +749,8 @@ with $A= \tau_E (N)$.
 
 We are now ready to define the {\it computation} relation $\comptr$ as follows:
 \begin{align*}
-([A]M\, N) & \comptr M\{N\} \tag{$\beta$}\\
-M \comptr M' & \impl [A]M \comptr [A]M' \tag{$\xi$}\\
+(\abs{A}M\, N) & \comptr M\{N\} \tag{$\beta$}\\
+M \comptr M' & \impl \abs{A}M \comptr \abs{A}M' \tag{$\xi$}\\
 M \comptr M' & \impl (M \, N) \comptr (M' \, N)\\
 M \comptr M' & \impl (N \, M) \comptr (N \, M')
 \end{align*}
@@ -762,7 +764,7 @@ confluent and Noetherian (because of the types!), and thus every term possesses 
 obtainable by iterating computation non-deterministically. Another valid conversion rule is $\eta$-
 conversion:
 \begin{equation}
-[x: A](M\, x) = M \tag{$\eta$}
+\abs{x: A}(M\, x) = M \tag{$\eta$}
 \end{equation}
 whenever $x$ does not appear in $M$. Let us show that it corresponds to {\it UniAbs},
 using our translation above.
@@ -780,7 +782,7 @@ It is easy to show that (with appropriate types):
 \end{array}
 \]
 and thus that $R^i_1(M) = M \comp \rho(i)$. As a particular case we get $M+1 = M\rho \fst$ 
-and thus we can read the law {\it UniAbs} as $[x](M^{+1}\, x) = M$. 
+and thus we can read the law {\it UniAbs} as $\abs{x}(M^{+1}\, x) = M$. 
 Whenever $x$ does not occur in $M$ the expressions $M$
 and $M^{+1}$ are concretely identical, and we obtain the $\eta$-conversion rule.
 Note however that {\it UniAbs}
@@ -808,7 +810,7 @@ $$
 $$
 and now the rule {\it Red} reads:
 $$
-\App \comp \la \abs f, x \ra = f \{x \}
+\App \comp \la \abs{} f, x \ra = f \{x \}
 $$
 which clearly validates the computation relation $\comptr$.
 
@@ -877,7 +879,7 @@ Let us call {\bf Univ} the theory obtained by the corresponding enrichment of Ex
 We may now translate any $M \in \l_n$ as an arrow $A_n(M) : U^n \imp U$ as follows:
 \begin{align*}
 A_n(k) &= \pi_{U^n}(k)\\
-A_n(\abs M) &= \text{\it Quote}\comp \abs A_{n+1}(M)\\
+A_n(\abs{} M) &= \text{\it Quote}\comp \abs{} A_{n+1}(M)\\
 A_n((M\, N)) &= \App \comp \la \text{\it Eval}\comp A_n(M) , A_n(N) \ra.
 \end{align*}
 
