--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -7,7 +7,7 @@
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
-\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -288,7 +288,7 @@ sequent calculus and lambda calculus is explained.
 \section{The Equational Nature of Category Theory}%
 
 Category theory reasoning proves equality of arrow compositions, as determined by diagrams. The
-corresponding equality is given in the model, i.e. in the category under consideration. But the
+corresponding equality is given in the model, {\it i.e.} in the category under consideration. But the
 proofs do not appeal to any particular property of the equality relation, such as extensionality. All
 we assume is that equality is a congruence with respect to the arrow operators.
 
