--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -360,7 +360,7 @@ The further simplification comes from the realization that we are not really obl
 
 Let $\Sigma$ be an arbitrary arrow signature, and $E$ be an arbitrary term formed by operators from $\Sigma$ and untyped variables. If there is an assignment of types to the variables of $E$ that makes $E$ well-typed with respect to $\Sigma$, there is a most general such assignment, independent in each variable, and furthermore the resulting type of $E$ is most general. Here ``more general'' means ``has as substitution instance''. We call this assignment, together with the resulting type of $E$, the {\it principal} typing of $E$. More generally, for every type sequent $S$, if there is an assignment of types which makes $E$ of a type some instance of $S$, there is a principal such assignment.
 
-The meta-theorem above is most useful. It permits to omit most of the types. When we write
+The meta-theorem above is most useful. It permits us to omit most of the types. When we write
 an equation $E= E'$, we shall implicitly refer to the principal typing giving $E$ and $E'$ 
 the same type $A\imp B$. So from now on, all equations in $\R$ 
 are written without type, the types being implicit
