--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -786,7 +786,7 @@ It is easy to show that (with appropriate types):
 && \pi(k+1) & \text{ if } k > i
 \end{array}
 \]
-and thus that $R^i_1(M) = M \comp \rho(i)$. As a particular case we get $M+1 = M\rho \fst$ 
+and thus that $R^i_1(M) = M \comp \rho(i)$. As a particular case we get $M^{+1} = M\comp \fst$ 
 and thus we can read the law {\it UniAbs} as $\abs{x}(M^{+1}\, x) = M$. 
 Whenever $x$ does not occur in $M$ the expressions $M$
 and $M^{+1}$ are concretely identical, and we obtain the $\eta$-conversion rule.
@@ -860,7 +860,7 @@ $$
  \text{\it Red}_1 \}.
 $$
 The state of the art in the theory of categorical combinatory algebra and its relations with
-various $\l$-calculi can be found in Curien’s extensive monography [6].
+various $\l$-calculi can be found in Curien’s extensive monography \cite{6}.
 
 \subsection{Possible Extensions}
 
