--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -1,4 +1,4 @@
-%!TEX root = huet-1986-pal.tex
+%!TEX root = huet-1986-cm.tex
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
@@ -755,9 +755,9 @@ with $A= \tau_E (N)$.
 We are now ready to define the {\it computation} relation $\comptr$ as follows:
 \begin{align*}
 (\abs{A}M\, N) & \comptr M\{N\} \tag{$\beta$}\\
-M \comptr M' & \impl \abs{A}M \comptr \abs{A}M' \tag{$\xi$}\\
-M \comptr M' & \impl (M \, N) \comptr (M' \, N)\\
-M \comptr M' & \impl (N \, M) \comptr (N \, M')
+M \comptr M' & \Longrightarrow \abs{A}M \comptr \abs{A}M' \tag{$\xi$}\\
+M \comptr M' & \Longrightarrow (M \, N) \comptr (M' \, N)\\
+M \comptr M' & \Longrightarrow (N \, M) \comptr (N \, M')
 \end{align*}
 It is clear that computation preserves the types of terms. But it also preserves their values, in
 the sense of the translation to CCC arrows: If $E \ent M : A$ and $M \comptr N$,
