--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -576,8 +576,8 @@ objects, which we shall call {\it contexts}. $1$ is the empty context,
 and if $E$ is a context of length $n$ and $A$ an object term, 
 $E \times A$ is a context of length $n+ 1$. 
 We write $|E|$ for the length of a context.
-If $C$ is the current set of (representable)
-objects, i.e. $\TC(\Phi,V)$, we denote by $C^*$ be the set of contexts.
+If $\C$ is the current set of (representable)
+objects, i.e. $\TC(\Phi,V)$, we denote by $\C^*$ be the set of contexts.
 
 If $1 \leq i \leq |E|$, we define the $i^{th}$ component $E_i$ of $E$ recursively, as:
 \[
