restore id1/uni1 notation

--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -184,8 +184,9 @@ pdfencoding=auto, psdextra
 \def\Idr{\text{\it Idr}}
 \def\Nil{\text{\it Nil}}
 \def\Uni{\text{\it Uni}}
-\def\Nill{\text{\it Nil}_1}
-\def\Unii{\text{\it Uni}_1}
+\def\Nill{\text{\it Nil\/}1}
+\def\Unii{\text{\it Uni\/}1}
+\def\IdOne{\text{\it Id\/}1}
 \def\Assoc{\text{\it Assoc}}
 \def\fst{\mathop{\text{\it fst\/}}}
 \def\snd{\mathop{\text{\it snd\/}}}
@@ -561,14 +562,14 @@ Note that $\Unii$ entails with the other equations two consequences:
 
 \begin{align*}
 \text{\it Zero} &: f \comp \Nil = \Nil\\
-\text{{\it Id}}_1 &: \Id = \Nil
+\IdOne &: \Id = \Nil
 \end{align*}
-Again, ${\Id}_1$ does not identify every $\Id$ with every $\Nil$,
+Again, $\IdOne$ does not identify every $\Id$ with every $\Nil$,
 but only (restoring explicit types) $\Id_1$
 with $\Nil_1$. Now it may be checked that $\Unii$ is actually a
 consequence of $\text{\it Zero}$
-and ${\Id}_1$. The rule $\text{\it Zero}$ is a bona fide rewrite rule, 
-which leaves the special equality $\text{{\it Id}}_1$ to be dealt with in an ad hoc
+and $\IdOne$. The rule $\text{\it Zero}$ is a bona fide rewrite rule, 
+which leaves the special equality $\IdOne$ to be dealt with in an ad hoc
 fashion.
 
 Using operators $\times$ and $1$ we may now construct $n$-tuples of
