--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -631,13 +631,13 @@ As before, this equational theory may be mechanically generated from the followi
 \end{tikzcd}
 \end{center}
 The logical point of view is here that $\impl$ is the (intuitionistic) implication. The operator $\App$
-is $\impl$-elimination%
-\footnote{Editor's note: the original paper has this as an introduction rule,
-which can't be right. So I fixed it.}.
+is $\impl$-introduction.%
+\footnote{Editor's note: This seems backwards? In natural deduction this would be elimination.}
 It plays the role of the Modus Ponens inference rule (although here it is a
-constant, and not a binary operator). Abstraction is $\impl$-introduction%
-\footnote{So of course I had to fix this one too},
-and plays somewhat the role of the deduction theorem.
+constant, and not a binary operator). Abstraction is $\impl$-elimination,%
+\footnote{This also seems backwards?}
+and plays somewhat the role
+of the deduction theorem.
 
 Let us give a few equational consequences of the theory {\bf Exp}:
 \begin{align*}
