revert my revert

--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -632,11 +632,12 @@ As before, this equational theory may be mechanically generated from the followi
 \end{tikzcd}
 \end{center}
 The logical point of view is here that $\impl$ is the (intuitionistic) implication. The operator $\App$
-is $\impl$-introduction.%
-\footnote{Editor's note: This seems backwards? In natural deduction this would be elimination.}
+is $\impl$-elimination.%
+\footnote{Editor's note: In the original paper Huet calls this ``$\impl$-introduction'', but it seems to me that this can't be right, so I changed it to the more standard current terminology}.
 It plays the role of the Modus Ponens inference rule (although here it is a
-constant, and not a binary operator). Abstraction is $\impl$-elimination,%
-\footnote{This also seems backwards?}
+constant, and not a binary operator). Abstraction is $\impl$-introduction,%
+\footnote{This is ``$\impl$-elimination'' in the original paper,
+but since I changed it above I also have to change it here.}
 and plays somewhat the role
 of the deduction theorem.
 
@@ -973,8 +974,8 @@ lems in Abstract Algebra, J. Leech Ed., Pergamon (1970) 263–297.
 Essays on Combinatory Logic, Lambda-calculus and Formalism, Eds. J. P. Seldin and J. R.
 Hindley, Academic Press (1980).
 
-\bb{19} J. Lambek and P. J. Scott, “Aspects of Higher Order Categorical Logic.” Contemporary Math-
-ematics 30 (1984) 145–174.
+\bb{19} J. Lambek and P. J. Scott, “Aspects of Higher Order Categorical Logic.” Contemporary
+Mathematics 30 (1984) 145–174.
 
 \bb{20} F. W. Lawvere “Diagonal Arguments and Cartesian Closed Categories.” in Category Theory,
 Homology Theory and their Applications II, Springer-Verlag Lect. Notes in Math. 92 (1969).
