--- a/2102.01561/2102.01561-psu.tex
+++ b/2102.01561/2102.01561-psu.tex
@@ -1,6 +1,7 @@
-
-\documentclass[a4paper]{amsart}
+\documentclass[12pt]{amsart}
 \usepackage{amssymb}
+\usepackage[papersize={7.2in, 10.0in}, left=.6in, right=.6in, top=.6in, bottom=.9in]{geometry}
+
 \usepackage[polutonikogreek, english]{babel}
 \usepackage{graphicx}
 \usepackage{pstricks}
@@ -12,6 +13,38 @@
 \newtheorem{axiom}{Axiom}
 \newtheorem{definition}{Definition}
 \pagestyle{plain}
+\sloppy
+\raggedbottom
+\frenchspacing
+
+\makeatletter
+\def\@seccntformat#1{%
+  \protect\textup{\protect\@secnumfont
+    \ifnum\pdfstrcmp{subsection}{#1}=0 \bfseries\fi% subsection # in \bfseries
+    \csname the#1\endcsname
+    \protect\@secnumpunct
+  }%
+}  
+\makeatother
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10,
+pdfencoding=auto, psdextra
+}
+
 \author{Wim Veldman}
 \address{Institute for Mathematics, Astrophysics and Particle Physics, Faculty of Science, Radboud University Nijmegen,
 Postbus 9010, 6500 GL Nijmegen, the Netherlands}
@@ -33,7 +66,10 @@ Well then, let me you, stranger,   precisely explain these matters\\\hfill \text
 
 \section{Introduction}\label{S:intr} \subsection{Topology and foundations}We want to introduce the reader to the \textit{intuitionistic} view of  mathematics proposed, developed and defended by the Dutch mathematician L.E.J. Brouwer (1881-1966)\footnote{The title of the paper is taken from an exclamation by the philosopher L.~Wittgenstein, see \cite{veldman20}.}. 
 
-Brouwer obtained his fame as a mathematician by a number of very important results in topology such as the \textit{Dimension Theorem}: \begin{quote} For all positive integers $m,n$,\\ if there is a homeomorphism from $[0,1]^m$ to $[0,1]^n$, then $m=n$, \end{quote} and the closely related \textit{Brouwer Fixed-point Theorem}: \begin{quote} For each positive integer $n$, for every continuous function $f$ from $[0,1]^n$ to $[0,1]^n$, there exists $p$ in $[0,1]^n$ such that $f(p)=p$. \end{quote}  
+Brouwer obtained his fame as a mathematician by a number of very important results in topology such as the \textit{Dimension Theorem}: 
+\begin{quote} For all positive integers $m,n$, if there is a homeomorphism from $[0,1]^m$ to $[0,1]^n$, then $m=n$, \end{quote} and the closely related \textit{Brouwer Fixed-point Theorem}: 
+\begin{quote} For each positive integer $n$, for every continuous function $f$ from $[0,1]^n$ to $[0,1]^n$, there exists $p$ in $[0,1]^n$ such that $f(p)=p$. 
+\end{quote}  
 
 These results were obtained in 1911. 
 
@@ -64,7 +100,6 @@ These results were obtained in 1911.
   
   Thinking of Brouwer's ability in topology one may reflect that a continuous function $f$ from $[0,1]^m$ to $[0,1]^n$ has the property that, for each  $p$ in $[0,1]^m$, one may effectively find approximations of the function value $f(p)$ from approximations of the argument $p$.  \textit{Continuous} functions are \textit{constructive} functions:  there is a deep connection between Brouwer's  foundational interests and his topological concerns.
   
-    \bigskip
 \subsection{The contents of the paper}
 The paper is divided into 21 Sections. Section 2 treats the \textit{basic intuition} giving rise to the nonnegative integers. Section 3 is a short reflection on theorems and their proofs.   In Sections 4-6, we consider three famous results, that usually are taken to be negative statements although they are not negative at all. In Section 4, we have a look at Euclid's theorem that there are infinitely many primes. In Section 5, we consider the theorem that $\sqrt 2$ is irrational. In Section 6, we introduce the reals and Cantor's theorem that there are uncountably many of them.  In Section 7, we introduce  \textit{reals oscillating around $0$}: if $x$ is such a number, one is unable to make out if $x<0$, $x=0$ or $x>0$.  Section 8 explains the reasons for interpreting the logical constants constructively and  rejecting the principle of the excluded third $X\vee \neg X$.  In Section 9 we study a basic result of real analysis: the {\it Intermediate Value Theorem}. The theorem is an existential statement that fails when taken at its constructive face value, but, if suitably reformulated and adapted, leads to several true and useful results. Finding such reconstructions of a  constructively invalid result is part of the \textit{intuitionistic program}.
 
@@ -78,19 +113,19 @@ In Section 15, we consider {\it Brouwer's Thesis on Bars in  $\mathcal{N}=\omega
 In  Section 21, we briefly describe how E. Bishop, who founded his own school of {\it constructive analysis} in the 1960's, treated Brouwer's legacy, and how also  P. Martin-L\"of's view on constructive mathematics was influenced by Brouwer.  
 
 Many Sections may be read independently from other Sections.  
-\section{The basic intuition}\label{S:intuition} \subsection{If you don't become like little children $\ldots$}\footnote{Matthew 18:3}$\:$
+\section{The basic intuition}\label{S:intuition} 
 
-
-Mathematics is a child's game and
+\subsection{If you don't become like little children...}$\!\!$%
+\footnote{Matthew 18:3} Mathematics is a child's game and
 each of us, from his tender days, is familiar with the {\it infinite} sequence: $$0,\;1, \;2, \;3,\dots$$
 
 The sequence of these \textit{natural} numbers or non-negative integers {\it has no end}.
 
-No end? Can we always go on? Yes, yes, we   can always go on!
+No end? 
 
-We never die, or get tired of the game. Please, do not plague us   with such silly objections.
+Can we always go on? Yes, yes, we   can always go on! 
 
-We courageously stick to the fascinating perspective of the never finished infinite. 
+We never die, or get tired of the game. Please, do not plague us   with such silly objections. We courageously stick to the fascinating perspective of the never finished infinite. 
 
 \subsection{Induction and recursion}
 The function $\mathsf{S}$  produces, given any non-negative integer $n$, the next one, $\mathsf{S}(n)$: $$\mathsf{S}(0)=1, \;\mathsf{S}(1) =2, \;\mathsf{S}(2)=3, \ldots$$
@@ -98,7 +133,7 @@ Let $P$ be a property of non-negative  integers such that one has a proof of $P(
 
 The principle of \textit{complete induction on the non-negative integers} thus is obvious.
 
-Suppose one defines: for each $ m$, $m+0=m$ and for each $n$, $m+\mathsf{S}(n)=\mathsf{S}(m+n)$. One  then      calculates, first   $m+1= m+\mathsf{S}(0)$, then  $m+2= m+\mathsf{S}(1)$, then  \\$m+3=m+\mathsf{S}(2)$, and so on, and, in this way,   one finds,  for each $n$, the meaning  of $m+n$.
+Suppose one defines: for each $ m$, $m+0=m$ and for each $n$, $m+\mathsf{S}(n)=\mathsf{S}(m+n)$. One  then      calculates, first   $m+1= m+\mathsf{S}(0)$, then  $m+2= m+\mathsf{S}(1)$, then  $m+3=m+\mathsf{S}(2)$, and so on, and, in this way,   one finds,  for each $n$, the meaning  of $m+n$.
 
 This also is obvious. 
 
@@ -110,16 +145,13 @@ In the nineteenth century,  G. Frege and R. Dedekind tried to  \textit{define} t
  
  \subsection{Awakening consciousness} Brouwer spent a lot of thought on finding the \textit{origin} of the idea of the non-negative integers, see for instance \cite{brouwer48}.
 
-\smallskip
-\textit{A first thing, then a next thing, then another thing, and again another thing  $\ldots$}
-
-\smallskip
+\textit{A first thing, then a next thing, then another thing, and again another thing...}
 
 Mark the beginning: \textit{a first thing, then a next  thing}.  Brouwer called it the \textit{basic intuition of two-ity}. He saw it happening in an awakening of slumbering consciousness, a shift of attention, a moment's reflection, or a {\it move of time}: here I am, and now I see: `here I am', and that is two things.  Iterating this shift of attention, I obtain three things, four things, and so on. 
 
 One is reminded of R. Dedekind's proof of  \cite[Theorem 66]{dedekind}: \textit{There exist infinite sets}, for instance, the `\textit{world of my thoughts, meine Gedankenwelt}'. Dedekind invokes a function $s\mapsto s'$ that associates to every thought $s$ of mine the thought $s'$: \textit{`I am thinking of $s$}' and concludes, from the fact that this function should be one-to-one and non-surjective, the latter because `\textit{I myself, mein eigenes Ich}' am a thought of mine not of the form $s'$, that I have infinitely many thoughts. 
 
-\smallskip As we mentioned already, Brouwer refers to Kant. Kant held that the concepts of `time' and `space', the `forms' of `{\it inner sense}' and `{\it outer sense}', respectively,  are \textit{apriori} concepts, that is, independent from every observation by the senses. These apriori concepts are  studied by mathematics, in its two divisions: `arithmetic' and `geometry'. Brouwer wants to maintain Kant's conviction about the apriori character of `time' but rejects the apriori character of `space'. This is partly because Kant believed space to be Euclidean, and, after Kant, one had the non-euclidean revolution. Also, geometry may be `arithmetized' and be robbed of its status as an independent discipline. 
+As we mentioned already, Brouwer refers to Kant. Kant held that the concepts of `time' and `space', the `forms' of `{\it inner sense}' and `{\it outer sense}', respectively,  are \textit{apriori} concepts, that is, independent from every observation by the senses. These apriori concepts are  studied by mathematics, in its two divisions: `arithmetic' and `geometry'. Brouwer wants to maintain Kant's conviction about the apriori character of `time' but rejects the apriori character of `space'. This is partly because Kant believed space to be Euclidean, and, after Kant, one had the non-euclidean revolution. Also, geometry may be `arithmetized' and be robbed of its status as an independent discipline. 
 
 \subsection{The `set' $\mathbb{N}$} We use $\mathbb{N}$ to denote the {\it set}
  of the nonnegative integers. This \textit{`set'} is a well-understood totality but an ongoing project, in no sense finished or complete. We use $m,n,  \ldots, s, t, \ldots$ as variables over $\mathbb{N}$. 
@@ -127,9 +159,9 @@ One is reminded of R. Dedekind's proof of  \cite[Theorem 66]{dedekind}: \textit{
 
 \section{Theorems and their proofs}  \subsection{Mere announcements} One does  not understand a  mathematical theorem  immediately upon hearing its statement.  The statement of the theorem is only a preliminary announcement, a partial communication,  a  promise. Its full meaning  will unfold itself  in the {\it proof}, and understanding this full meaning   is reserved for someone who takes the trouble to go through the proof and to reconstruct it for herself.  
 
-\subsection{No to `Platonism'}\label{SS:notoplato} The statement of a theorem  tells us that   some  mental construction has been succesfully completed. It is not reporting a fact one might `observe'  in a mathematical reality lying outside us. \\The latter view has been strongly defended by Plato (427-347 B.C.). He  believed that the contemplation  of the timeless mathematical reality, that one approaches with the mind and not with the senses and that one should not touch with one's fingers\footnote{See Plato, {\it Politeia (the Republic) VII} 527a.},   would prepare us for the contemplation of what is the true interest of the philosopher: the timeless reality of the `{\it Ideas}'.  
+\subsection{No to `Platonism'}\label{SS:notoplato} The statement of a theorem  tells us that   some  mental construction has been succesfully completed. It is not reporting a fact one might `observe'  in a mathematical reality lying outside us. The latter view has been strongly defended by Plato (427-347 B.C.). He  believed that the contemplation  of the timeless mathematical reality, that one approaches with the mind and not with the senses and that one should not touch with one's fingers\footnote{See Plato, {\it Politeia (the Republic) VII} 527a.},   would prepare us for the contemplation of what is the true interest of the philosopher: the timeless reality of the `{\it Ideas}'.  
 
- The intuitionistic mathematician rejects this view. In the ancient debate between Speusippus (405-338 B.C.) and Menaechmus (380-320 B.C.) as reported by Proclus (410-485), she would definitely have sided with Menaechmus. Speusippus held that every `problem' essentially is a `theorem', i.e. a truth to behold, whereas Menaechmus defended the view that every `theorem'  essentially is a `problem', i.e. a construction to find and carry out.\footnote{The 48 propositions of the First Book of Euclid's {\it Elements} (300 B.C.) are divided into 34 `theorems' and 14 `problems'.}  Proclus, in his wisdom,  judged that  both views contain some truth\footnote{`Both parties are right', see \cite[Prologue, Part Two, $\S$ 78]{proclus}}, and, indeed, one might say, both views try to explain a part of our mathematical experience. \\ In our days, many mathematicians  still feel they are discovering \textit{hard facts} not of their own making. They  prefer a so-called {\it realistic} view, reminiscent of Plato's, while admitting it is difficult to give a convincing account of the {\it mathematical reality} see \cite[p. 123]{hardy}.  
+ The intuitionistic mathematician rejects this view. In the ancient debate between Speusippus (405-338 B.C.) and Menaechmus (380-320 B.C.) as reported by Proclus (410-485), she would definitely have sided with Menaechmus. Speusippus held that every `problem' essentially is a `theorem', i.e. a truth to behold, whereas Menaechmus defended the view that every `theorem'  essentially is a `problem', i.e. a construction to find and carry out.\footnote{The 48 propositions of the First Book of Euclid's {\it Elements} (300 B.C.) are divided into 34 `theorems' and 14 `problems'.}  Proclus, in his wisdom,  judged that  both views contain some truth\footnote{`Both parties are right', see \cite[Prologue, Part Two, $\S$ 78]{proclus}}, and, indeed, one might say, both views try to explain a part of our mathematical experience. In our days, many mathematicians  still feel they are discovering \textit{hard facts} not of their own making. They  prefer a so-called {\it realistic} view, reminiscent of Plato's, while admitting it is difficult to give a convincing account of the {\it mathematical reality} see \cite[p. 123]{hardy}.  
  
 
 As to Brouwer's {\it formalist} adversaries, some of them develop their formalisms with an eye to `reality' while others,  like Brouwer himself, keep far from it.  A famous defender of the realistic point of view is K. G\"odel (1906-1972). The formula $\mathsf{CH}$ in the language of set theory that is taken to represent Cantor's famous  continuum hypothesis\footnote{In an intuitionistic context, the classical continuum hypothesis has no immediate meaning. One may however study meaningful statements that seem to come close tot it, see \cite{gielends} and \cite[Sections 7 and 8]{veldman20b}.} has been shown, by G\"odel himself in 1938, and by P. Cohen in 1963, respectively,  not to be refuted  and not to be proven by the rules of first-order predicate logic from the formulas accepted as representing `the' axioms of set theory, provided the latter do not give a contradiction. G\"odel observed, even before Cohen proved his result,  that  this fact does not solve the problem: we still have to find out if $\mathsf{CH}$  holds in the mathematical universe, see \cite{goedel47}\footnote{“Of course it is happening inside your head, Harry, but why on earth should that mean that it is not real?” Dumbledore in: 
@@ -160,7 +192,6 @@ In Sections \ref{S:infprime}, \ref{S:irrat} and \ref{S:uncount}, trying to make 
  
 \section{Infinitely many prime numbers}\label{S:infprime}
 
-
 The following theorem is due to Euclid, see  \cite[Book IX, Proposition 20]{euclid}. It is important and rewarding to study the proof in the original. 
 
 \begin{theorem}\label{T:euclid} The prime numbers are more than every quantity of prime numbers  given beforehand.
@@ -175,12 +206,10 @@ One may seriously wonder if this paraphrase is better than the original.
 
 Note that Euclid  only treats the case: $n=3$. He of course expects the reader to pick up the general idea from this exemplary case. {\it The reader must be willing to understand him}. This is a  {\it conditio sine qua non} for every written proof.
 
-
  Also note that Euclid provides  an  \textit{algorithm}: he demonstrates how, given any finite list of prime numbers, one \textit{calculates} a prime number that still is missing.
 
 Most importantly, as we observed already in the previous Section, Euclid  in a way lays down the meaning of the word \textit{`infinite'}. His  proof suggests   how to \textit{understand} a proposition of the form: `\textit{there are infinitely  many numbers satisfying  $A$}'.  One may prove such a thing by doing something like he does in the case of the prime numbers.
 
-\medskip
 Sometimes, a  description of Euclid's proof is given that does no justice to the argument.   According to this description, one is  invited  to \textit{assume}: there is a finite list containing all the primes.  Euclid   then \textit{reduces} this assumption   \textit{to absurdity} and  forces one to admit that the initial assumption is false: there is \textit{no} such finite list, \textit{which is to say:} there are \textit{not} finitely many primes. 
 
 G.H.~Hardy, a great mathematician and a convinced platonist,  has this view, see \cite[Section 12]{hardy}. In the context of Euclid's theorem, he calls \textit{reductio ad absurdum} `\textit{one of a mathematician's finest weapons}', but adds a footnote stating: \textit{`The proof can be arranged so as to avoid a \emph{reductio} and logicians of some schools would prefer that it should be.'}
